--- a/src/formulario/FrmVendedor.form
+++ b/src/formulario/FrmVendedor.form
@@ -16,7 +16,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="CLIENTE"/>
+    <Property name="title" type="java.lang.String" value="VENDEDOR"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
