--- a/src/formulario/FrmProducto.form
+++ b/src/formulario/FrmProducto.form
@@ -16,7 +16,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="PROVEEDOR"/>
+    <Property name="title" type="java.lang.String" value="PRODUCTO"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -42,7 +42,7 @@
     <Container class="javax.swing.JTabbedPane" name="TbPanel">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="10" y="10" width="730" height="550"/>
+          <AbsoluteConstraints x="10" y="10" width="820" height="550"/>
         </Constraint>
       </Constraints>
 
@@ -83,7 +83,7 @@
                                   <Component id="TfPrecio" alignment="0" pref="240" max="32767" attributes="0"/>
                                   <Component id="TfFechaVenc" alignment="0" max="32767" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="113" max="32767" attributes="0"/>
+                              <EmptySpace pref="203" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="CmbProveedor" min="-2" pref="155" max="-2" attributes="0"/>
                                   <Group type="102" alignment="1" attributes="0">
@@ -287,7 +287,7 @@
                       <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="TbDato" min="-2" pref="425" max="-2" attributes="0"/>
-                      <EmptySpace pref="201" max="32767" attributes="0"/>
+                      <EmptySpace pref="291" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
