--- a/src/formulario/FrmIntermedia.form
+++ b/src/formulario/FrmIntermedia.form
@@ -196,7 +196,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="BIENVENIDO AL SISTEMA"/>
+    <Property name="title" type="java.lang.String" value="PHARMSYS"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="33" green="33" red="0" type="rgb"/>
     </Property>
